Extend panel size to avoid layout breaking

--- a/app/styles/components/_panel.scss
+++ b/app/styles/components/_panel.scss
@@ -1,6 +1,6 @@
 .panel {
   background-color: $color-secondary;
-  max-width: 954px;
+  max-width: 970px;
   padding: 32px;
 
   &--dense {
